@@ -5,6 +5,10 @@ import com.slime.ast.nodes.misc.Program;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.ArrayList;
+import java.util.Comparator;
+import java.util.List;
+import java.util.stream.Stream;
 
 /**
  * Batch parser probe used by generated TypeScript parser parity tests.
@@ -15,7 +19,7 @@ public final class QinParserBatchProbeMain {
 
     public static void main(String[] args) throws Exception {
         if (args == null || args.length < 2) {
-            throw new IllegalArgumentException("Usage: QinParserBatchProbeMain <Program|QinModule> <source-file>...");
+            throw new IllegalArgumentException("Usage: QinParserBatchProbeMain <Program|QinModule> <source-file>... | --dir <source-dir>");
         }
 
         String rule = args[0];
@@ -26,24 +30,44 @@ public final class QinParserBatchProbeMain {
         }
 
         QinParserFacade facade = new QinParserFacade();
+        List<Path> sourcePaths = sourcePaths(args);
         System.out.println("rule=" + rule);
-        for (int i = 1; i < args.length; i++) {
-            Path sourcePath = Path.of(args[i]);
+        for (int i = 0; i < sourcePaths.size(); i++) {
+            Path sourcePath = sourcePaths.get(i);
             String source = Files.readString(sourcePath, StandardCharsets.UTF_8);
+            System.out.println("case=" + i + "\tstart=true\tfile=" + sourcePath);
             try {
                 Program program = facade.parseProgram(source);
-                System.out.println("case=" + (i - 1)
+                System.out.println("case=" + i
                         + "\tsuccess=true"
-                        + "\tfile=" + sourcePath.getFileName()
+                        + "\tfile=" + sourcePath
                         + "\tprogram=" + (program == null ? "null" : program.getClass().getName()));
-            } catch (Exception e) {
+            } catch (Throwable e) {
                 String message = e.getClass().getSimpleName() + ": " + e.getMessage();
-                System.out.println("case=" + (i - 1)
+                System.out.println("case=" + i
                         + "\tsuccess=false"
-                        + "\tfile=" + sourcePath.getFileName()
+                        + "\tfile=" + sourcePath
                         + "\terror=" + sanitize(message));
             }
         }
+    }
+
+    private static List<Path> sourcePaths(String[] args) throws Exception {
+        if (args.length == 3 && "--dir".equals(args[1])) {
+            Path root = Path.of(args[2]).toAbsolutePath().normalize();
+            try (Stream<Path> stream = Files.walk(root)) {
+                return stream
+                        .filter(Files::isRegularFile)
+                        .filter(path -> path.getFileName().toString().endsWith(".ts"))
+                        .sorted(Comparator.comparing(Path::toString))
+                        .toList();
+            }
+        }
+        List<Path> paths = new ArrayList<>();
+        for (int i = 1; i < args.length; i++) {
+            paths.add(Path.of(args[i]).toAbsolutePath().normalize());
+        }
+        return paths;
     }
 
     private static String sanitize(String value) {
